macros/tests/args-macro/bad-type-enum.stderr
error: proc-macro derive panicked
 --> tests/args-macro/bad-type-enum.rs:3:10
  |
3 | #[derive(UsherArgs)]
  |          ^^^^^^^^^
  |
  = help: message: [UsherArgs] Only struct supported by UsherArgs
