macros/tests/args-macro/bad-type-enum.rs
use usher_macros::UsherArgs;

#[derive(UsherArgs)]
enum Foo {}

fn main() {}
